interface for inviting people by group owner

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,264 +2,264 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  activerecord: 
-    attributes: 
-      feedback: 
-        content: 
-        supervision: 
-        user: 
-    errors: 
-      messages: 
-        blank: 
-        confirmation: 
-        inclusion: 
-        invalid: 
-        not_a_number: 
-        not_an_integer: 
-        too_long: 
-        too_short: 
-      models: 
-        answer: 
-          blank: 
-        chat_message: 
-          blank: 
-        chat_room: 
-          blank: 
-        feedback: 
-          attributes: 
-            content: 
-              blank: 
-            supervision: 
-              blank: 
-            user: 
-              blank: 
-          blank: 
-        group: 
-          blank: 
-          taken: 
-          too_long: 
-        idea: 
-          blank: 
-          inclusion: 
-          not_a_number: 
-          not_an_integer: 
-        ideas_feedback: 
-          blank: 
-        membership: 
-          taken: 
-        question: 
-          blank: 
-        relationship: 
-          blank: 
-        solution: 
-          blank: 
-          inclusion: 
-          not_a_number: 
-          not_an_integer: 
-        solutions_feedback: 
-          blank: 
-        supervision: 
-          invalid: 
-          invalid_event: 
-          invalid_transition: 
-        supervision_feedback: 
-          blank: 
-        supervision_membership: 
-          taken: 
-        topic: 
-          blank: 
-        user: 
-          blank: 
-          confirmation: 
-          invalid: 
-          taken: 
-          too_long: 
-          too_short: 
-        vote: 
-          blank: 
-    models: 
-      feedback: 
-    state_machines: 
-      events: 
-        general_feedback: 
-        join_member: 
-        next_step: 
-        owner_feedback: 
-        owner_idea_feedback: 
-        owner_solution_feedback: 
-        owner_solutions_feedback: 
-        post_ideas_feedback: 
-        post_solutions_feedback: 
-        post_supervision_feedback: 
-        post_topic: 
-        post_topic_vote: 
-        post_vote_for_next_step: 
-        step_back_to_asking_questions: 
-        step_back_to_giving_ideas_feedback: 
-        step_back_to_giving_solutions_feedback: 
-        step_back_to_providing_ideas: 
-        step_back_to_providing_solutions: 
-      state: 
-        events: 
-          general_feedback: 
-          join_member: 
-          next_step: 
-          owner_feedback: 
-          owner_idea_feedback: 
-          owner_solution_feedback: 
-          owner_solutions_feedback: 
-          post_ideas_feedback: 
-          post_solutions_feedback: 
-          post_supervision_feedback: 
-          post_topic: 
-          post_topic_vote: 
-          post_vote_for_next_step: 
-          step_back_to_asking_questions: 
-          step_back_to_giving_ideas_feedback: 
-          step_back_to_providing_ideas: 
-        states: 
-          gathering_topics: 
-      states: 
-        gathering_topics: 
-      step: 
-        events: 
-          post_ideas_feedback: 
-          post_solutions_feedback: 
-          post_supervision_feedback: 
-          post_topic: 
-          post_topic_vote: 
-          post_vote_for_next_step: 
-          step_back_to_asking_questions: 
-          step_back_to_giving_ideas_feedback: 
-          step_back_to_giving_solutions_feedback: 
-          step_back_to_providing_ideas: 
-          step_back_to_providing_solutions: 
-  attributes: 
-    chat_room: 
-    conent: 
-    content: 
-    description: 
-    email: 
-    followed_id: 
-    follower_id: 
-    founder: 
-    group: 
-    name: 
-    passcode: 
-    password: 
-    password_confirmation: 
-    question: 
-    rating: 
-    state: 
-    state_event: 
-    statement: 
-    step: 
-    supervision: 
-    user: 
-    user_id: 
-  chat_messages: 
-    create: 
-      title: 
-  chat_rooms: 
-    show: 
-      links: 
+  activerecord:
+    attributes:
+      feedback:
+        content:
+        supervision:
+        user:
+    errors:
+      messages:
+        blank:
+        confirmation:
+        inclusion:
+        invalid:
+        not_a_number:
+        not_an_integer:
+        too_long:
+        too_short:
+      models:
+        answer:
+          blank:
+        chat_message:
+          blank:
+        chat_room:
+          blank:
+        feedback:
+          attributes:
+            content:
+              blank:
+            supervision:
+              blank:
+            user:
+              blank:
+          blank:
+        group:
+          blank:
+          taken:
+          too_long:
+        idea:
+          blank:
+          inclusion:
+          not_a_number:
+          not_an_integer:
+        ideas_feedback:
+          blank:
+        membership:
+          taken:
+        question:
+          blank:
+        relationship:
+          blank:
+        solution:
+          blank:
+          inclusion:
+          not_a_number:
+          not_an_integer:
+        solutions_feedback:
+          blank:
+        supervision:
+          invalid:
+          invalid_event:
+          invalid_transition:
+        supervision_feedback:
+          blank:
+        supervision_membership:
+          taken:
+        topic:
+          blank:
+        user:
+          blank:
+          confirmation:
+          invalid:
+          taken:
+          too_long:
+          too_short:
+        vote:
+          blank:
+    models:
+      feedback:
+    state_machines:
+      events:
+        general_feedback:
+        join_member:
+        next_step:
+        owner_feedback:
+        owner_idea_feedback:
+        owner_solution_feedback:
+        owner_solutions_feedback:
+        post_ideas_feedback:
+        post_solutions_feedback:
+        post_supervision_feedback:
+        post_topic:
+        post_topic_vote:
+        post_vote_for_next_step:
+        step_back_to_asking_questions:
+        step_back_to_giving_ideas_feedback:
+        step_back_to_giving_solutions_feedback:
+        step_back_to_providing_ideas:
+        step_back_to_providing_solutions:
+      state:
+        events:
+          general_feedback:
+          join_member:
+          next_step:
+          owner_feedback:
+          owner_idea_feedback:
+          owner_solution_feedback:
+          owner_solutions_feedback:
+          post_ideas_feedback:
+          post_solutions_feedback:
+          post_supervision_feedback:
+          post_topic:
+          post_topic_vote:
+          post_vote_for_next_step:
+          step_back_to_asking_questions:
+          step_back_to_giving_ideas_feedback:
+          step_back_to_providing_ideas:
+        states:
+          gathering_topics:
+      states:
+        gathering_topics:
+      step:
+        events:
+          post_ideas_feedback:
+          post_solutions_feedback:
+          post_supervision_feedback:
+          post_topic:
+          post_topic_vote:
+          post_vote_for_next_step:
+          step_back_to_asking_questions:
+          step_back_to_giving_ideas_feedback:
+          step_back_to_giving_solutions_feedback:
+          step_back_to_providing_ideas:
+          step_back_to_providing_solutions:
+  attributes:
+    chat_room:
+    conent:
+    content:
+    description:
+    email:
+    followed_id:
+    follower_id:
+    founder:
+    group:
+    name:
+    passcode:
+    password:
+    password_confirmation:
+    question:
+    rating:
+    state:
+    state_event:
+    statement:
+    step:
+    supervision:
+    user:
+    user_id:
+  chat_messages:
+    create:
+      title:
+  chat_rooms:
+    show:
+      links:
         new_thread: new thread
       submit: Submit
-      title: 
-  errors: 
-    attributes: 
-      chat_room: 
-        blank: 
-      content: 
-        blank: 
-      description: 
-        blank: 
-        too_long: 
-      email: 
-        blank: 
-        invalid: 
-      followed_id: 
-        blank: 
-      follower_id: 
-        blank: 
-      founder: 
-        blank: 
-      group: 
-        blank: 
-      name: 
-        blank: 
-        too_long: 
-      password: 
-        blank: 
-        confirmation: 
-        too_long: 
-        too_short: 
-      question: 
-        blank: 
-      rating: 
-        inclusion: 
-        not_a_number: 
-        not_an_integer: 
-      state: 
-        invalid: 
-      state_event: 
-        invalid: 
-      statement: 
-        blank: 
-      step: 
-        invalid: 
-      supervision: 
-        blank: 
-      user: 
-        blank: 
-  flash: 
+      title:
+  errors:
+    attributes:
+      chat_room:
+        blank:
+      content:
+        blank:
+      description:
+        blank:
+        too_long:
+      email:
+        blank:
+        invalid:
+      followed_id:
+        blank:
+      follower_id:
+        blank:
+      founder:
+        blank:
+      group:
+        blank:
+      name:
+        blank:
+        too_long:
+      password:
+        blank:
+        confirmation:
+        too_long:
+        too_short:
+      question:
+        blank:
+      rating:
+        inclusion:
+        not_a_number:
+        not_an_integer:
+      state:
+        invalid:
+      state_event:
+        invalid:
+      statement:
+        blank:
+      step:
+        invalid:
+      supervision:
+        blank:
+      user:
+        blank:
+  flash:
     sign_in_request: Please sign in to access this page.
-  formtastic: 
+  formtastic:
     required: required
-  groups: 
-    create: 
-      flash: 
+  groups:
+    create:
+      flash:
         successful: Group Create Successfully
-      title: 
-    current_supervision: 
-      title: 
-    group_brief: 
-      confirmations: 
+      title:
+    current_supervision:
+      title:
+    group_brief:
+      confirmations:
         delete: You sure?
-      links: 
+      links:
         chat: Chat
         delete: delete
         edit: Edit
         join: join
         leave: leave
         session: Session
-    index: 
+    index:
       no_groups: There are no groups here.
-      title: 
+      title:
         all_groups: All Groups
         your_groups: Your Groups
-    new: 
+    new:
       title: New Group
-    show: 
-      links: 
+    show:
+      links:
         edit: Edit
-  helpers: 
-    label: 
-      chat_update: 
+  helpers:
+    label:
+      chat_update:
         message: ""
-      session: 
+      session:
         email: ""
         password: ""
-  layouts: 
-    application: 
+  layouts:
+    application:
       base_title: peergroup
       title: peergroup
-    footer: 
-      links: 
+    footer:
+      links:
         about: About
         contact: Contact
-    header: 
-      links: 
+    header:
+      links:
         all_groups: All Groups
         create_group: Create Group
         help: Help
@@ -271,89 +271,97 @@ en:
         signout: Sign out
         supervisions: Supervisions
         users: Users
-      title: 
+      title:
         peergroup: peergroup
         welcome: "Welcome "
-  other: 
-    controller: 
-      action: 
-        flash: 
+  other:
+    controller:
+      action:
+        flash:
           error: default
           successful: default
-  pages: 
-    about: 
+  pages:
+    about:
       about_title: About Peer Supervision Groups
       title: About
-    contact: 
+    contact:
       contact_title: Contact
       title: Contact
-    help: 
+    help:
       help: Help
       title: Help
-    home: 
+    home:
       title: Home
-    home_guest: 
+    home_guest:
       about_title: About Peer Supervision Groups
       description: This is the live test site for the Peer Supervision Groups project for Patongo. Visit <a href='http://www.patongo.de/'> project page</a>.
-      links: 
+      links:
         signup: Sign up now!
       title: Peer Supervision Groups
-    home_member: 
+    home_member:
       latest_groups: Latest groups
       your_groups: Your groups
-  relationships: 
-    create: 
-      title: 
-    destroy: 
-      title: 
-  sessions: 
-    create: 
+  relationships:
+    create:
+      title:
+    destroy:
+      title:
+  sessions:
+    create:
       title: Sign in
-    destroy: 
-      title: 
-    new: 
-      links: 
+    destroy:
+      title:
+    new:
+      links:
         signup: Sign up now!
       signin: Sign in
       signin_title: Sign in
       signup_teaser: "New user? "
       title: Sign in
-  supervision_memberships: 
-    create: 
-      title: 
-    destroy: 
-      title: 
-  users: 
-    create: 
-      title: 
-    destroy: 
-      title: 
-    edit: 
-      buttons: 
+  supervision_memberships:
+    create:
+      title:
+    destroy:
+      title:
+  users:
+    create:
+      title:
+    destroy:
+      title:
+    edit:
+      buttons:
         update: Update
       edit_title: Edit user
-      links: 
+      links:
         change_gravatar: change
-      title: 
-    index: 
-      title: 
+      title:
+    index:
+      title:
       users_title: All users
-    new: 
-      buttons: 
+    new:
+      buttons:
         signup: Sign up
-      links: 
+      links:
         signin: Sign in!
       signup: Sign up
       signup_title: Sign up
-      title: 
-    show: 
+      title:
+    show:
       group_list_title: My groups
-      title: 
-    update: 
-      title: 
-  votes: 
-    create: 
-      title: 
+      title:
+    update:
+      title:
+  votes:
+    create:
+      title:
+
+  invitations:
+    index:
+      title: "Invitations"
+    new:
+      title: "New invitation"
+    create:
+      title: "New invitation"
 
   answers:
     create:
@@ -419,7 +427,7 @@ en:
 
       topic_vote: Vote on this topic
     form:
-      content_hint: 
+      content_hint:
       legend: Your topic proposition
       content_hint: Enter your problem or leave blank if you don not have any
       submit: Post your topic
