--- a/README.rdoc
+++ b/README.rdoc
@@ -108,3 +108,10 @@ On production server mysql database is used.
 Credentials are stored in non tracked file config/database.yml
 If you have problems with installing mysql2 gem, check this: http://stackoverflow.com/questions/3608287/installing-mysql2-gem-for-rails-3
 If you don't have mysql database at all, you can bundle gems by: bundle install --without production
+
+Deployment is done by Capistrano
+Deployment process:
+
+* make changes, commit and push to github server
+* from your local machine, type: cap deploy
+* That's all
