renamed invtitable to closed group, added hint for closed checkbox

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,11 +215,12 @@ en:
   flash:
     sign_in_request: Please sign in to access this page.
   formtastic:
-    required: required
+    required: "required"
     hints:
       group:
         name: "This is the name of your peergroup, give it a descriptive name, so all of your colleagues can easily find it."
         description: "Give your description all the information needed, so that new members of peergroup find you and know what your group is all about."
+        closed: "This makes the group private, however you can email colleagues with a link to join the group. If you are discussing sensitive topics, this is the option you most likely want to check."
   groups:
     create:
       flash:
