moved group managment actions to founder namespace

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -233,15 +233,6 @@ en:
       history: "History"
       links:
         edit: Edit
-    edit:
-      remove_member: "Remove from group"
-      membership: "Membership"
-      requested_memberships: "Requested memberships"
-      sent_memberships: "Sent memberships"
-      accept: "Accept"
-      reject: "Reject"
-      back: "Back"
-      title: "Edit group"
     group_brief:
       confirmations:
         delete: You sure?
@@ -257,8 +248,20 @@ en:
       title:
         all_groups: All Groups
         your_groups: Your Groups
-    new:
-      title: New Group
+
+  founder:
+    groups:
+      new:
+        title: New Group
+      edit:
+        remove_member: "Remove from group"
+        membership: "Membership"
+        requested_memberships: "Requested memberships"
+        sent_memberships: "Sent memberships"
+        accept: "Accept"
+        reject: "Reject"
+        back: "Back"
+        title: "Edit group"
 
   helpers:
     label:
